# goyoung

./: README.md
goyoung_audio/: CMakeLists.txt  package.xml
goyoung_audio/include/goyoung_audio/: goyoung_audio_execute.cpp
goyoung_audio/src/: main.cpp
goyoung_can/: CMakeLists.txt  package.xml
goyoung_can/include/goyoung_can/: motor_can_execution.cpp
goyoung_can/src/: main.cpp
goyoung_gui/: package.xml  setup.cfg  setup.py
goyoung_gui/goyoung_gui/: goyoung_gui.py  goyoung_gui.ui  goyoung_ros.py  page1.py  page1.ui  page2.py  page2.ui  page3.py  page3.ui  page4.py  page4.ui
goyoung_main/: CMakeLists.txt  package.xml
goyoung_main/include/goyoung_main/: goyoung_execute.cpp
goyoung_main/launch/: main.launch.py
goyoung_main/params/: setting.yaml
goyoung_main/src/: main.cpp
goyoung_motion/: CMakeLists.txt  package.xml
goyoung_motion/include/goyoung_motion/: motion_execute.hpp  motion_record.hpp
goyoung_motion/motion_sequence/: sequence.yaml
goyoung_motion/save_file/: origin.yaml  origin_time.yaml  stay.yaml  stay_time.yaml  test.yaml  test_time.yaml
goyoung_motion/src/: motion_execute.cpp  motion_record.cpp
goyoung_msgs/: CMakeLists.txt  package.xml
goyoung_msgs/msg/: Checkpoint.msg  Mode.msg  Motionpath.msg  Motor.msg  Robot.msg  Shutdown.msg
goyoung_msgs/srv/: Motortorque.srv
goyoung_tcp/: CMakeLists.txt  package.xml
goyoung_tcp/include/goyoung_tcp/: tcp_execution.cpp
goyoung_tcp/src/: main.cpp
